Fixed scaling on mobile, began experimenting with API

--- a/styles.css
+++ b/styles.css
@@ -45,6 +45,7 @@ body {
 .container, .post-container {
     max-width: 900px;
     margin: 0 auto;
+    padding: 15px;
 }
 
 #footer {
